# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Get compilation with Erlang/OTP 21 working
    * Add function cloudi_lists:iodata_to_list/1
    * Add functions findl/2 findr/2 join/2 lowercase/1 split/2
      titlecase/1 trim/1 trim/2 triml/1 triml/2 trimr/1 trimr/2
      uppercase/1 to cloudi_string
    * Update nodefinder, cgroups, reltool_util, syslog_socket

2018-02-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_crdt:update functions
    * Add the cloudi_crdt:byte_size function
    * Improve cloudi_service:get_pids type specification
    * Add the cloudi_queue:byte_size functions
    * Change the cloudi_queue:size/1 and cloudi_queue:failures/1
      functions to cloudi_queue:size/2 and cloudi_queue:failures/2
    * Update cpg

2018-02-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add bootstrap and clean_vclocks functionality to cloudi_crdt
      so the CloudI service processes that utilize it may
      restart, start, or fail without affecting its operation
    * Fix external CloudI service Erlang process viewing with
      the format_status/2 callback due to gen_fsm/gen_statem difference

2018-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automake subdirs use for distclean
    * Fix minimum Erlang/OTP version (it is now 19.3)
    * Add ordered argument to cloudi_queue
    * Add mcast support to cloudi_queue
    * Add the cloudi_crdt module for replicating an Erlang map
      between internal CloudI services
    * Add cloudi_crdt usage in the Erlang count integration test
      (when the count test is ran with the mode argument as crdt)

2018-01-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_http_rest cloudi_service_init failure handling

2018-01-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add check to cause an internal or external service to crash