@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2018-02-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add events_subscribe/3 events_subscribe/4 events_clear/3 functions
+      to cloudi_crdt for providing events to the CloudI service process
+
 2018-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Get compilation with Erlang/OTP 21 working
